added a few comments to pom.xml files, and adapted gwt-maven-plugin for being able to use any version of the plugin with any version of GWT.