@@ -11,7 +11,8 @@
 
 	<artifactId>atom-client</artifactId>
 
-	<!-- atom-server needs a war file of atom-client, since a jar would simply be copied to the lib folder.. -->
+	<!-- atom-server needs a war file of atom-client, since a jar would simply 
+		be copied to the lib folder.. -->
 	<packaging>war</packaging>
 
 	<properties>
@@ -32,6 +33,21 @@
 		<!--) at compile time 'provided' dependencies are available anyway -->
 		<!--) those dependencies do not need to be transversed into atom-server -->
 
+		<!-- GWT client side APIs -->
+		<dependency>
+			<groupId>com.google.gwt</groupId>
+			<artifactId>gwt-user</artifactId>
+			<scope>provided</scope>
+			<version>${gwt.version}</version>
+		</dependency>
+		
+		<!-- <dependency>
+			<groupId>net.wetheinter</groupId>
+			<artifactId>xapi-gwt-reflect</artifactId>
+			<version>0.5-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency> -->
+
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>atom-core</artifactId>
@@ -48,19 +64,11 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!-- GWT client side APIs -->
-		<dependency>
-			<groupId>com.google.gwt</groupId>
-			<artifactId>gwt-user</artifactId>
-			<scope>provided</scope>
-			<version>${gwt.version}</version>
-		</dependency>
-
 		<!-- at.ac.fhcampuswien.atom.client.gui.HistoryPanel uses BiMap from guava -->
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava-gwt</artifactId>
-			<version>16.0.1</version>
+			<version>18.0</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -99,7 +107,27 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>gwt-maven-plugin</artifactId>
-				<version>${gwt.version}</version>
+
+				<!-- manually specify the GWT dependencies, so that we can choose gwt and gwt-maven-plugin versions independently of each other -->
+				<version>${gwt.mavenplugin.version}</version>
+				<dependencies>
+					<dependency>
+						<groupId>com.google.gwt</groupId>
+						<artifactId>gwt-user</artifactId>
+						<version>${gwt.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.google.gwt</groupId>
+						<artifactId>gwt-dev</artifactId>
+						<version>${gwt.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.google.gwt</groupId>
+						<artifactId>gwt-codeserver</artifactId>
+						<version>${gwt.version}</version>
+					</dependency>
+				</dependencies>
+
 				<configuration>
 					<module>${gwt.module}</module>
 					<strict>true</strict>
@@ -111,6 +139,11 @@
 					<cssFiles>
 						<cssFile>at/ac/fhcampuswien/atom/client/gui/AtomClientBundleStyle.css</cssFile>
 					</cssFiles>
+
+				<extraJvmArgs>-Xmx4096M -Xms1024M</extraJvmArgs>
+				<!-- <extraJvmArgs>-Xmx4096M -Xms1024M -XX:PermSize=128m -XX:MaxPermSize=256m</extraJvmArgs> -->
+                <!-- <extraJvmArgs>-Xmx1024M -Xms1024m -Xss32m -XX:PermSize=64m -XX:MaxPermSize=128m -XX:+UseCompressedOops -XX:+UseConcMarkSweepGC -XX:+CMSPermGenSweepingEnabled -XX:+CMSClassUnloadingEnabled -DgeneratePom=true -XX:ReservedCodeCacheSize=128m -XX:+PrintCompilation -server</extraJvmArgs> -->
+
             		<sourceLevel>1.7</sourceLevel>
 					<deploy>${project.build.directory}/gwtc/extra</deploy>
 					<extra>${project.build.directory}/gwtc/extra</extra>
